--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -50,7 +50,7 @@
     the function is applied over all elements of the input arrays individually, whereby arrays of
     lower rank or scalars are \enquote{broadcasted} along dimensions as necessary.
   \item[{\(\Dif F(x, y) = (\Delta_1, \Delta_2) \mapsto \partial_1F(x, y)\,\Delta_1 + \partial_2F(x,
-      y)\,\Delta_2\)}] Derivatives are written using a capital \(\Dif\) for the Fréchet derivative
+      y)\,\Delta_2\)}] Derivatives are written using a capital \(\Dif\) for the a total derivative
     operator, and \(\partial_i\) for the conventional partial derivatives with respect to the
     \(i\)-th argument.
   \item[{\jlinlfont f(x) = rand(x)}] Julia code (including identifiers mention in the text) is
