--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -212,6 +212,19 @@
   primaryClass = {cs, stat}
 }
 
+@book{bishop2006pattern,
+  title = {Pattern Recognition and Machine Learning},
+  author = {Bishop, Christopher M.},
+  date = {2006},
+  publisher = {{Springer}},
+  location = {{New York}},
+  file = {/home/philipp/Zotero/storage/KLR526SM/Bishop - 2006 - Pattern recognition and machine learning.pdf},
+  isbn = {978-0-387-31073-2},
+  langid = {english},
+  pagetotal = {738},
+  series = {Information Science and Statistics}
+}
+
 @report{bolewski2015staged,
   title = {Staged Programming in {{Julia}}},
   author = {Bolewski, Jake},
